examples/tuto-cours/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: my-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-web
      containers:
      - name: nginx
        image: nginx:latest
#        image: traefik/whoami
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: data
#        readinessProbe:
#          tcpSocket:
#            port: 80
#          initialDelaySeconds: 15
#          periodSeconds: 10
